+ пример работы с датчиком BMP085

--- a/Исходники/002-BMP085/Makefile
+++ b/Исходники/002-BMP085/Makefile
@@ -5,6 +5,8 @@
 OPTIMIZATION = s
 
 SRC_C  = main.c
+SRC_C += macros.c
+SRC_C += bmp085.c
 SRC_C += mcu_i2c.c
 SRC_C += stm32f4xx_rcc.c
 SRC_C += stm32f4xx_i2c.c
